# cprintf

./: Cargo.toml  Examples.md  README.md  demo.sh
asciinema/: base  color_detail  color_features  quality_of_life  special_chars  styles
src/: cprintf.rs  lib.rs  main.rs
