
[package]
name = "cprintf"
version = "0.2.0"
edition = "2021"
authors = ["Ununhexium <uuh116@gmail.com>"]
license = "Apache-2.0"
description = "A tool to format with color and style"
readme = "README.md"
homepage = "https://github.com/ununhexium/cprintf/blob/v0.2.0/README.md"
repository = "https://github.com/ununhexium/cprintf"
keywords = ["cli", "print", "echo", "color", "format"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
